Blender freezes to infinite loop when switching to PAUSED Cycles rendered viewport #41197

Closed
opened 2014-07-26 19:09:59 +02:00 by Maverick · 11 comments

System Information
win64 gtx titan i7

Blender Version
blender-2.71-f37ec65-win64-vc9

Short description of error
This happens all the time but when working on large projects it freezes Blender indefinitely.
Heavy scene (5k+ objects, 10M+ tris) containing fluid sim for example.

The rendered viewport is paused from a previous switch (viewport is now in solid mode).
Trying to switch from solid to rendered freezes blender IF THE PAUSED option was previosuly enabled.

Cannot attach a sample file because it must be really big.

Thank you

**System Information** win64 gtx titan i7 **Blender Version** blender-2.71-f37ec65-win64-vc9 **Short description of error** This happens all the time but when working on large projects it freezes Blender indefinitely. Heavy scene (5k+ objects, 10M+ tris) containing fluid sim for example. The rendered viewport is paused from a previous switch (viewport is now in solid mode). Trying to switch from solid to rendered freezes blender IF THE PAUSED option was previosuly enabled. Cannot attach a sample file because it must be really big. Thank you
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @dragostanasie

Added subscriber: @dragostanasie
Author

Note: this should not be fixed switched by auto-unpausing of the rendered viewport for the following reason:

Blender remembers the state of the 3d view.

So if you are in the Node Editor (for example) and you decide to switch to the 3d view,
(which was forgotten in rendered mode)
then there is the risk of Blender crashing by running out of memory.

This happens often when you work close to your memory limit or the Undo buffer is full.

Note: this should not be fixed switched by auto-unpausing of the rendered viewport for the following reason: Blender remembers the state of the 3d view. So if you are in the Node Editor (for example) and you decide to switch to the 3d view, (which was forgotten in rendered mode) then there is the risk of Blender crashing by running out of memory. This happens often when you work close to your memory limit or the Undo buffer is full.

Added subscriber: @Sergey

Added subscriber: @Sergey

Not really sure what does it mean "freezes"? Here rendered viewport just stays on pause and once the pause is removed blender starts rendering just nice.

If you're experiencing different behavior please attach as small .blend file as possible.

Not really sure what does it mean "freezes"? Here rendered viewport just stays on pause and once the pause is removed blender starts rendering just nice. If you're experiencing different behavior please attach as small .blend file as possible.
Author

@Sergey: you need a production scene, something with heavy geometry, parenting, caches, particles, smoke

My wild guess is that blender does some kind of refresh to the UI which needs to process the depsgraph but it sends another one before it can end the first one.
So it gets stuck in a loop, the UI no longer responds, under Windows the entire UI turns white, so it is frozen. You can only kill the blender process.

My current file is 1GB large and is under NDA for a client.
If you cannot replicate it I will try to make a custom blend but not sure how I will attach it.

@Sergey: you need a production scene, something with heavy geometry, parenting, caches, particles, smoke My wild guess is that blender does some kind of refresh to the UI which needs to process the depsgraph but it sends another one before it can end the first one. So it gets stuck in a loop, the UI no longer responds, under Windows the entire UI turns white, so it is frozen. You can only kill the blender process. My current file is 1GB large and is under NDA for a client. If you cannot replicate it I will try to make a custom blend but not sure how I will attach it.
Author

Heavy scene --> switch to rendered mode --> pause the viewport --> change to a different viewport (text editor for example) ---> switch back to 3d viewport (which is now in paused rendered mode) --> freeze

Heavy scene --> switch to rendered mode --> pause the viewport --> change to a different viewport (text editor for example) ---> switch back to 3d viewport (which is now in paused rendered mode) --> freeze

Ok with those steps can see some real slowdown (not a dead-lock tho) with the mango files. Will investigate further.

Ok with those steps can see some real slowdown (not a dead-lock tho) with the mango files. Will investigate further.
Sergey Sharybin self-assigned this 2014-07-28 17:16:25 +02:00

This issue was referenced by 42aef164f4

This issue was referenced by 42aef164f44e90df0e85cea4361c0537d11c925d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 42aef164f4.

Closed by commit 42aef164f4.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#41197
No description provided.