Fix T41197: Blender freezes to infinite loop when switching to PAUSED Cycles rendered viewport